# aoe4-overlay-linux-wayland

./: .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  install-desktop-file.sh  readme.md  todo.txt  unused.txt
models/: numbers_only_dict.txt
src/: dbus_portal_screen_cast.rs  frame_processor.rs  image_analyzer.rs  lib.rs  main.rs  overlay_window_gtk.rs  pipewire_stream.rs  pixelbuf_wrapper.rs  process_monitor.rs  screen_cast.rs  system_menu.rs  system_tray.rs  utils.rs  wayland_record.rs
src/ocr/: fallback_ocr.rs  mod.rs  onnx_ocr.rs  onnx_parallel_ocr.rs  paddle_ocr.rs  template_matching_ocr.rs
src_images/icons/: index.theme
tests/: image_analysis_test.rs
