[package]
name = "aoe4_overlay"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = ">=1.40", features = ["rt", "rt-multi-thread", "macros", "signal"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# Process monitoring
procfs = "0.17"

# GUI
gdk = { git = "https://github.com/gtk-rs/gtk4-rs.git", version = ">=0.10", package = "gdk4", features = ["v4_16"] }
gtk = { git = "https://github.com/gtk-rs/gtk4-rs.git", version = ">=0.10", package = "gtk4", features = ["gnome_48"] }

glib = "0.21"
gio = "0.21"

libappindicator-zbus = "0.1"

# Computer Vision & OCR
opencv = { version = "0.96", default-features = false, features = ["imgproc", "imgcodecs", "highgui", "clang-runtime"] }
image = { version = "0.25", features = ["color_quant"] }
ocrs = "0.11"

# Streaming and DBus
zbus = { version = "5.11", default-features = false, features = ["tokio"] }
enigo = "0.6"
pipewire = { version = "0.8", features = ["v0_3_77"] }
rten = "0.22.1"

ort = { version = "2.0.0-rc.10", features = ["migraphx", "rocm", "download-binaries", "fetch-models"] }
oar-ocr = { version = "0.2" }
imageproc = "0.25.0"

[profile.release]
opt-level = 2

[profile.test]
opt-level = 2
